[gd_scene load_steps=9 format=3 uid="uid://ddrajabgyar7r"]

[ext_resource type="Theme" uid="uid://dwt1c0b2tvhig" path="res://theme_resources/theme_template.tres" id="1_ix3c8"]
[ext_resource type="Script" path="res://gameplay_ui/pause_menu/PauseMenu.gd" id="1_nnmou"]
[ext_resource type="PackedScene" uid="uid://b8o7l7qide3e1" path="res://how_to_play/how_to_play.tscn" id="3_rxfeb"]

[sub_resource type="Animation" id="Animation_o5ytk"]
resource_name = "EDITOR"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_jlyby"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_4ua1p"]
resource_name = "close"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_unpause"
}]
}

[sub_resource type="Animation" id="Animation_0pjgj"]
resource_name = "open"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PanelContainer/Content/Resume")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"grab_focus"
}]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_update_time_scale_value"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6fsw4"]
_data = {
"EDITOR": SubResource("Animation_o5ytk"),
"RESET": SubResource("Animation_jlyby"),
"close": SubResource("Animation_4ua1p"),
"open": SubResource("Animation_0pjgj")
}

[node name="PauseMenu" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_force_pass_scroll_events = false
theme = ExtResource("1_ix3c8")
script = ExtResource("1_nnmou")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6fsw4")
}

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -123.0
offset_right = 200.0
offset_bottom = 123.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_layout_mode = 1

[node name="Content" type="VBoxContainer" parent="PanelContainer"]
offset_left = 25.0
offset_top = 25.0
offset_right = 575.0
offset_bottom = 600.0
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/Content"]
offset_right = 550.0
offset_bottom = 140.0
theme_type_variation = &"HeaderLarge"
text = "PAUSED"
horizontal_alignment = 1

[node name="Resume" type="Button" parent="PanelContainer/Content"]
offset_top = 144.0
offset_right = 550.0
offset_bottom = 227.0
theme_type_variation = &"PauseButtons"
text = "Resume"

[node name="Restart" type="Button" parent="PanelContainer/Content"]
offset_top = 231.0
offset_right = 550.0
offset_bottom = 314.0
theme_type_variation = &"PauseButtons"
text = "Restart
"

[node name="HowToPlay" type="Button" parent="PanelContainer/Content"]
offset_top = 318.0
offset_right = 550.0
offset_bottom = 401.0
theme_type_variation = &"PauseButtons"
text = "How To Play"

[node name="TimeScaleLine" type="HBoxContainer" parent="PanelContainer/Content"]
visible = false
offset_top = 209.0
offset_right = 350.0
offset_bottom = 257.0

[node name="Label" type="Label" parent="PanelContainer/Content/TimeScaleLine"]
offset_right = 157.0
offset_bottom = 48.0
text = "time scale"

[node name="Slider" type="HSlider" parent="PanelContainer/Content/TimeScaleLine"]
offset_left = 161.0
offset_top = 16.0
offset_right = 301.0
offset_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 2.0
step = 0.01
value = 1.0

[node name="Value" type="Label" parent="PanelContainer/Content/TimeScaleLine"]
offset_left = 305.0
offset_right = 350.0
offset_bottom = 48.0
text = "1.0"

[node name="QuitToMainMenu" type="Button" parent="PanelContainer/Content"]
offset_top = 405.0
offset_right = 550.0
offset_bottom = 488.0
theme_type_variation = &"PauseButtons"
text = "Quit to main menu"

[node name="Quit" type="Button" parent="PanelContainer/Content"]
offset_top = 492.0
offset_right = 550.0
offset_bottom = 575.0
theme_type_variation = &"PauseButtons"
text = "Quit"

[node name="HowToPlay" parent="." instance=ExtResource("3_rxfeb")]
visible = false

[connection signal="pressed" from="PanelContainer/Content/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PanelContainer/Content/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="PanelContainer/Content/HowToPlay" to="." method="_on_how_to_play_pressed"]
[connection signal="value_changed" from="PanelContainer/Content/TimeScaleLine/Slider" to="." method="_on_slider_value_changed"]
[connection signal="pressed" from="PanelContainer/Content/QuitToMainMenu" to="." method="_on_quit_to_main_menu_pressed"]
[connection signal="pressed" from="PanelContainer/Content/Quit" to="." method="_on_quit_pressed"]
[connection signal="how_to_play_closed" from="HowToPlay" to="." method="_on_how_to_play_how_to_play_closed"]
